capability with legacy minecraft versions